--- a/src/main/webapp/static/html/index.html
+++ b/src/main/webapp/static/html/index.html
@@ -92,14 +92,14 @@
 			  </div>
 		  </div>
 		  <div class="form-group">
-		    <label for="text" class="col-sm-2 control-label">邮箱：</label>
+		    <label  class="col-sm-2 control-label">邮箱：</label>
 		    <div class="col-sm-10">
 		      <input type="email" class="form-control" id="email_update_input" name="email" placeholder="邮箱">
 		      <span class="help-block"></span>
 		    </div>
 		  </div>
 		   <div class="form-group">
-		    <label for="text" class="col-sm-2 control-label">部门：</label>
+		    <label  class="col-sm-2 control-label">部门：</label>
 		    <div class="col-sm-4">
 				<select class="form-control" name="deptId">			
 				 
@@ -198,14 +198,23 @@ function validate_add_form(){
 	var empName=$("#empName_add_input").val();
 	var email=$("#email_add_input").val();
 	var regName=/(^[a-zA-Z0-9-_]{6,16}$)|(^[\u2E80-\u9FFF]{2,5})/;
-	
+	var regEmail=/^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$/
+	//验证用户名
 	if(!regName.test(empName)){		
 		show_validate_msg("#empName_add_input","error","用户名输入不正确")
 		return false;		
 	}else{	
 		show_validate_msg("#empName_add_input","success","")
 		return true;
-	} 
+	}
+	//验证邮箱
+	if(!regEmail.test(email)){
+		show_validate_msg("#email_add_input","error","邮箱格式不正确")
+		return false;
+	}else{
+		show_validate_msg("#email_add_input","success","")
+		return true;
+	}
 }
 
 //新增员工信息
